src/tests/cases/snapshots/diskonaut__tests__cases__ui__enter_folder_medium_width.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 16.0K (4 files), freed: 0 | /tmp/diskonaut_tests/enter_folder_medium_width        
┌────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                              subfolder1/ (+1 descendants)                              │
│                                                                                        │
│                                                                                        │
│                                       8.0K (50%)                                       │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
├────────────────────────────────────────────────────────────────────────────────────────┤
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                         file2                                          │
│                                                                                        │
│                                       4.0K (25%)                                       │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
├────────────────────────────────────────────────────────────────────────────────────────┤
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                         file3                                          │
│                                                                                        │
│                                                                                        │
│                                       4.0K (25%)                                       │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
                                                                        (x = Small files) 
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <DELETE> - delete

