src/tests/cases/snapshots/diskonaut__tests__cases__ui__enter_folder_small_width-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                                                            
                                                            
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ████subfolder_with_quite_a_long_name/ (+1 descendants)████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ████████████████████████8.0K (50%)████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 subfolder_with_quite_a_long_name                           
                                                            

