src/tests/cases/snapshots/diskonaut__tests__cases__ui__enter_folder_small_width.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 16.0K | /tmp/diskonaut_tests/enter_folder_small_width      
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│    subfolder_with_quite_a_long_name/ (+1 descendants)    │
│                                                          │
│                                                          │
│                        8.0K (50%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file2                           │
│                                                          │
│                        4.0K (25%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│                          file3                           │
│                                                          │
│                                                          │
│                        4.0K (25%)                        │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                          (x = Small files) 
 ←↓↑→/<ENTER>/<ESC>: navigate, <DELETE>: del

